--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
     <br>
     <div class="progskills">
         <h3><u>Programming Skills</u></h3>
-        <input type="checkbox" id="html1" name="html1" value="html1">
+        <input type="checkbox" id="html1" name="html1" value="html1" checked>
         <label for="html1">HTML</label>
         <br>
-        <input type="checkbox" id="html1" name="css1" value="css1">
+        <input type="checkbox" id="html1" name="css1" value="css1" checked>
         <label for="css1">CSS</label>
         <br>
-        <input type="checkbox" id="python1" name="python1" value="python1">
+        <input type="checkbox" id="python1" name="python1" value="python1" checked>
         <label for="python1">Python</label>
         <br>
     </div>
